# AI_ECN

./: Details.txt  Homework3_EF.ipynb  README.md  packets.cap  tempCodeRunnerFile.c  tempCodeRunnerFile.python
.ipynb_checkpoints/: Homework3_EF-checkpoint.ipynb
ALGOA/: ALGOA.docx  CM.ipynb  CM.md
ALGOA/.ipynb_checkpoints/: CM-checkpoint.md
ALGOA/Correction du TP Compression-20230901/: bwt.py  main.py
ALGOA/Programmes vus en cours (exercices, exemples)-20230901/: avl.py  trominos.py
ALGOA/cpp/: pointeur.cpp
INDUR/: CM2.md  Global overview of past current and future impacts of ICTs.docx  Notes.docx  动粗.docx
PAPY/: PAPY_C1.ipynb  PAPY_TP1_eleves.ipynb  Python.md  README.md
PAPY/TP_Final/: JuliaPlot.bat  MandelbrotPlot.bat  README.md  aliases.sh  setup.cfg  setup.py
PAPY/TP_Final/Mandelbrot_Julia_Plot/: TP.html  TP.ipynb  __init__.py  __main__.py
PAPY/TP_Final/Mandelbrot_Julia_Plot.egg-info/: SOURCES.txt  top_level.txt
PAPY/TP_Final/TP_final.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
PAPY/TP_Final/doc/source/: TP_final.rst  conf.py  index.rst
PAPY/TP_Final/doc/source/_static/: pandoc.css
PAPY/TP_Final/tests/: test_plot.py
Projet1/: NAT.md  Notes.ipynb  Notes.md  note.md
S1/PAPY/TP_Final/: JuliaPlot.bat  LISCENCE.txt  MandelbrotPlot.bat  README.md  pandoc.css  setup.cfg  setup.py
S1/PAPY/TP_Final/Mandelbrot_Julia_Plot/: TP.ipynb  TP.py  __init__.py
S1/PAPY/TP_Final/Mandelbrot_Julia_Plot.egg-info/: PKG-INFO  entry_points.txt
S1/PAPY/TP_Final/doc/source/: Mandelbrot_Julia_Plot.rst
STASC/: Machine Learning.md
(+141 files in other folders)
