
[metadata]
name = TP_final
author = Zhenyu PU
author_email = zhenyu.pu@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = c'est TP final
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.10
install_requires = 
    pytest
    # Liste des dépendances externes


[options.entry_points]
console_scripts =
    ditbonjour=TP_final.__main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS