
[metadata]
name = Mandelbrot_Julia_Plot
author = Zhenyu PU
author_email = zhenyu.pu@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = This is to plot Mandelbrot sets and Julia sets
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.10
install_requires = 
    pytest
    # Liste des dépendances externes


[options.entry_points]
console_scripts =
    ditbonjour=Mandelbrot_Julia_Plot.__main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS